src/objects/Dev_ExamHistory_Obj__c.object
<CustomObject>
    <description>試験の結果、合格判定などの履歴を保持します。
プレフィックス「EH」</description>
    <fields>
        <fullName>Dev_EH_BorderLine__c</fullName>
        <label>合格ライン</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dev_EH_CorrectAnswerNum__c</fullName>
        <label>正解数</label>
        <summaryFilterItems>
            <field>Dev_Answer_Obj__c.Dev_AN_isCorrect__c</field>
            <operation>equals</operation>
            <value>○</value>
        </summaryFilterItems>
        <summaryForeignKey>Dev_Answer_Obj__c.Dev_AN_ExaminationHistory__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Dev_EH_ExamQuestionNum__c</fullName>
        <label>試験問題数</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dev_EH_ExamResult__c</fullName>
        <formula>if( Dev_EH_BorderLine__c &lt;=  Dev_EH_CorrectAnswerNum__c , &apos;合格&apos;, &apos;不合格&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>試験結果</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dev_EH_ExamTrialist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>試験実施者</label>
        <referenceTo>Dev_Respondant_Obj__c</referenceTo>
        <relationshipLabel>試験履歴</relationshipLabel>
        <relationshipName>Dev_RE_ExaminationHistories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dev_EH_TrialExam__c</fullName>
        <label>実施試験</label>
        <referenceTo>Dev_ExaminationMaster_Obj__c</referenceTo>
        <relationshipLabel>試験履歴</relationshipLabel>
        <relationshipName>Dev_EM_ExaminationHistories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>試験履歴</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>EH-{YYYY}{MM}{dd}-{000}</displayFormat>
        <label>試験履歴No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>